--- a/icentral-bbfs/Cargo.toml
+++ b/icentral-bbfs/Cargo.toml
@@ -20,10 +20,9 @@ path = "../icentral-scores"
 path = "../icentral-sigmas"
 [dependencies.icentral-workspace]
 path = "../icentral-workspace"
-[dependencies.named-item]
-path = "../named-item"
-[dependencies.renew-traits]
-path = "../renew-traits"
+[dependencies]
+named-item = "0.1.0"
+renew-traits = "0.1.0"
 [package]
 edition = "2021"
 name = "icentral-bbfs"
