--- a/icentral-distances/Cargo.toml
+++ b/icentral-distances/Cargo.toml
@@ -4,8 +4,8 @@ path = "../icentral-deps"
 path = "../icentral-mindexed-map"
 [dependencies.icentral-nodeid]
 path = "../icentral-nodeid"
-[dependencies.renew-traits]
-path = "../renew-traits"
+[dependencies]
+renew-traits = "0.1.0"
 [package]
 edition = "2021"
 name = "icentral-distances"
