--- a/icentral-node-queue/Cargo.toml
+++ b/icentral-node-queue/Cargo.toml
@@ -2,10 +2,9 @@
 path = "../icentral-deps"
 [dependencies.icentral-nodeid]
 path = "../icentral-nodeid"
-[dependencies.named-item]
-path = "../named-item"
-[dependencies.renew-traits]
-path = "../renew-traits"
+[dependencies]
+named-item = "0.1.0"
+renew-traits = "0.1.0"
 [package]
 edition = "2021"
 name = "icentral-node-queue"
