--- a/icentral-node-stack/Cargo.toml
+++ b/icentral-node-stack/Cargo.toml
@@ -2,8 +2,8 @@
 path = "../icentral-deps"
 [dependencies.icentral-nodeid]
 path = "../icentral-nodeid"
-[dependencies.renew-traits]
-path = "../renew-traits"
+[dependencies]
+renew-traits = "0.1.0"
 [package]
 edition = "2021"
 name = "icentral-node-stack"
