--- a/icentral-timing-update/Cargo.toml
+++ b/icentral-timing-update/Cargo.toml
@@ -34,8 +34,8 @@ path = "../icentral-stats"
 path = "../icentral-timer"
 [dependencies.icentral-workspace-map]
 path = "../icentral-workspace-map"
-[dependencies.renew-traits]
-path = "../renew-traits"
+[dependencies]
+renew-traits = "0.1.0"
 [package]
 edition = "2021"
 name = "icentral-timing-update"
