--- a/icentral-workspace/Cargo.toml
+++ b/icentral-workspace/Cargo.toml
@@ -28,10 +28,9 @@ path = "../icentral-scores"
 path = "../icentral-sigmas"
 [dependencies.icentral-visit-markers]
 path = "../icentral-visit-markers"
-[dependencies.named-item]
-path = "../named-item"
-[dependencies.renew-traits]
-path = "../renew-traits"
+[dependencies]
+named-item = "0.1.0"
+renew-traits = "0.1.0"
 [package]
 edition = "2021"
 name = "icentral-workspace"
