--- a/icentral-all-pairs-distance/Cargo.toml
+++ b/icentral-all-pairs-distance/Cargo.toml
@@ -8,8 +8,9 @@ path = "../icentral-graph-interface"
 path = "../icentral-mindexed-map"
 [dependencies.icentral-nodeid]
 path = "../icentral-nodeid"
-[dependencies.named-item]
-path = "../named-item"
+[dependencies]
+named-item = "0.1.0"
+renew-traits = "0.1.0"
 [package]
 edition = "2021"
 name = "icentral-all-pairs-distance"
