--- a/icentral-articulation-point/Cargo.toml
+++ b/icentral-articulation-point/Cargo.toml
@@ -12,8 +12,9 @@ path = "../icentral-neighbors"
 path = "../icentral-nodeid"
 [dependencies.icentral-predecessor-map]
 path = "../icentral-predecessor-map"
-[dependencies.named-item]
-path = "../named-item"
+[dependencies]
+named-item = "0.1.0"
+renew-traits = "0.1.0"
 [package]
 edition = "2021"
 name = "icentral-articulation-point"
