--- a/icentral-bc-mem/Cargo.toml
+++ b/icentral-bc-mem/Cargo.toml
@@ -10,10 +10,9 @@ path = "../icentral-nodeid"
 path = "../icentral-parents-map"
 [dependencies.icentral-sigmas]
 path = "../icentral-sigmas"
-[dependencies.named-item]
-path = "../named-item"
-[dependencies.renew-traits]
-path = "../renew-traits"
+[dependencies]
+named-item = "0.1.0"
+renew-traits = "0.1.0"
 [package]
 edition = "2021"
 name = "icentral-bc-mem"
