--- a/icentral-bcc/Cargo.toml
+++ b/icentral-bcc/Cargo.toml
@@ -16,10 +16,9 @@ path = "../icentral-neighbors"
 path = "../icentral-nodeid"
 [dependencies.icentral-predecessor-map]
 path = "../icentral-predecessor-map"
-[dependencies.named-item]
-path = "../named-item"
-[dependencies.renew-traits]
-path = "../renew-traits"
+[dependencies]
+named-item = "0.1.0"
+renew-traits = "0.1.0"
 [package]
 edition = "2021"
 name = "icentral-bcc"
