--- a/icentral-component/Cargo.toml
+++ b/icentral-component/Cargo.toml
@@ -18,10 +18,9 @@ path = "../icentral-neighbors"
 path = "../icentral-nodeid"
 [dependencies.icentral-subgraph]
 path = "../icentral-subgraph"
-[dependencies.named-item]
-path = "../named-item"
-[dependencies.renew-traits]
-path = "../renew-traits"
+[dependencies]
+named-item = "0.1.0"
+renew-traits = "0.1.0"
 [package]
 edition = "2021"
 name = "icentral-component"
