--- a/icentral-cycle/Cargo.toml
+++ b/icentral-cycle/Cargo.toml
@@ -6,8 +6,8 @@ path = "../icentral-edge"
 path = "../icentral-edges"
 [dependencies.icentral-nodeid]
 path = "../icentral-nodeid"
-[dependencies.renew-traits]
-path = "../renew-traits"
+[dependencies]
+renew-traits = "0.1.0"
 [package]
 edition = "2021"
 name = "icentral-cycle"
