--- a/icentral-edges/Cargo.toml
+++ b/icentral-edges/Cargo.toml
@@ -8,10 +8,9 @@ path = "../icentral-errors"
 path = "../icentral-label-map"
 [dependencies.icentral-nodeid]
 path = "../icentral-nodeid"
-[dependencies.named-item]
-path = "../named-item"
-[dependencies.renew-traits]
-path = "../renew-traits"
+[dependencies]
+named-item = "0.1.0"
+renew-traits = "0.1.0"
 [package]
 edition = "2021"
 name = "icentral-edges"
