--- a/icentral-graph/Cargo.toml
+++ b/icentral-graph/Cargo.toml
@@ -60,10 +60,9 @@ path = "../icentral-sigmas"
 path = "../icentral-timer"
 [dependencies.icentral-visit-markers]
 path = "../icentral-visit-markers"
-[dependencies.named-item]
-path = "../named-item"
-[dependencies.renew-traits]
-path = "../renew-traits"
+[dependencies]
+named-item = "0.1.0"
+renew-traits = "0.1.0"
 [package]
 edition = "2021"
 name = "icentral-graph"
