--- a/icentral-mock/Cargo.toml
+++ b/icentral-mock/Cargo.toml
@@ -4,10 +4,9 @@ path = "../icentral-deps"
 path = "../icentral-graph-interface"
 [dependencies.icentral-nodeid]
 path = "../icentral-nodeid"
-[dependencies.named-item]
-path = "../named-item"
-[dependencies.renew-traits]
-path = "../renew-traits"
+[dependencies]
+named-item = "0.1.0"
+renew-traits = "0.1.0"
 [package]
 edition = "2021"
 name = "icentral-mock"
