--- a/icentral-neighbors/Cargo.toml
+++ b/icentral-neighbors/Cargo.toml
@@ -8,8 +8,8 @@ path = "../icentral-errors"
 path = "../icentral-mindexed-map"
 [dependencies.icentral-nodeid]
 path = "../icentral-nodeid"
-[dependencies.renew-traits]
-path = "../renew-traits"
+[dependencies]
+renew-traits = "0.1.0"
 [package]
 edition = "2021"
 name = "icentral-neighbors"
