--- a/icentral-operation-update/Cargo.toml
+++ b/icentral-operation-update/Cargo.toml
@@ -24,10 +24,9 @@ path = "../icentral-nodeid"
 path = "../icentral-operation"
 [dependencies.icentral-scores]
 path = "../icentral-scores"
-[dependencies.named-item]
-path = "../named-item"
-[dependencies.renew-traits]
-path = "../renew-traits"
+[dependencies]
+named-item = "0.1.0"
+renew-traits = "0.1.0"
 [package]
 edition = "2021"
 name = "icentral-operation-update"
