--- a/icentral-parents-map/Cargo.toml
+++ b/icentral-parents-map/Cargo.toml
@@ -6,8 +6,8 @@ path = "../icentral-graph-interface"
 path = "../icentral-mindexed-map"
 [dependencies.icentral-nodeid]
 path = "../icentral-nodeid"
-[dependencies.renew-traits]
-path = "../renew-traits"
+[dependencies]
+renew-traits = "0.1.0"
 [package]
 edition = "2021"
 name = "icentral-parents-map"
