--- a/icentral-speedup-calculation/Cargo.toml
+++ b/icentral-speedup-calculation/Cargo.toml
@@ -24,8 +24,8 @@ path = "../icentral-nodeid"
 path = "../icentral-stats"
 [dependencies.icentral-timer]
 path = "../icentral-timer"
-[dependencies.renew-traits]
-path = "../renew-traits"
+[dependencies]
+renew-traits = "0.1.0"
 [package]
 edition = "2021"
 name = "icentral-speedup-calculation"
