--- a/icentral-test-insertion/Cargo.toml
+++ b/icentral-test-insertion/Cargo.toml
@@ -40,10 +40,9 @@ path = "../icentral-speedup-calculation"
 path = "../icentral-stats"
 [dependencies.icentral-timer]
 path = "../icentral-timer"
-[dependencies.named-item]
-path = "../named-item"
-[dependencies.renew-traits]
-path = "../renew-traits"
+[dependencies]
+named-item = "0.1.0"
+renew-traits = "0.1.0"
 [package]
 edition = "2021"
 name = "icentral-test-insertion"
