--- a/icentral-test-speedup/Cargo.toml
+++ b/icentral-test-speedup/Cargo.toml
@@ -18,8 +18,8 @@ path = "../icentral-graph-interface"
 path = "../icentral-nodeid"
 [dependencies.icentral-stats]
 path = "../icentral-stats"
-[dependencies.renew-traits]
-path = "../renew-traits"
+[dependencies]
+renew-traits = "0.1.0"
 [package]
 edition = "2021"
 name = "icentral-test-speedup"
